Implement Delete Event
