# domain/repositories/EventsRepositoryInterface.ts
@@ -8,4 +8,5 @@ export interface EventsRepositoryInterface {
     getEventsByPage(page: number, limits: number): Promise<EventEntity[] | null>;
     updateEvent(id: number, event: EventEntity): Promise<InsertResultInterface | null>;
     searchEvents(query: string): Promise<EventEntity[] | null>;
+    deleteEventById(id: number): Promise<InsertResultInterface | null>;
 };
